[package]
authors = ["Norris Oduro <norrisjibril@gmail.com>"]
edition = "2018"
name = "file_merger_threaded"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.110", features = ["derive"]}
serde_json = "1.0.53"
threadpool = "1.8.1"
